# 5g-quality-dashboard-project

./: .gitignore  README.md  pyproject.toml
data/processed/: aggregated_metrics.csv  ai_insights.csv
outputs/: aggregated_metrics.csv  ai_insights.csv  model_report.csv
reports/: model_report.csv
src/: main_pipeline.py
