[project]
name = "5g-quality-dashboard-project"
version = "0.1.0"
description = "AI-powered 5G network service quality dashboard using Python and Power BI"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]
