[project]
name = "5g-quality-dashboard-project"
version = "0.1.0"
description = "AI-powered 5G network service quality dashboard using Python, machine learning, and Power BI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
]